<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/backgroundCard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/md_theme_surface"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bgLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookImage">

        <TextView
            android:id="@+id/bookTitle"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/abril_fatface_regular"
            android:gravity="center|center_vertical"
            android:text="@string/book_title"
            android:textColor="@color/md_theme_onSurface"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/bookAuthor"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center|center_vertical"
            android:text="@string/book_author"
            android:textColor="@color/md_theme_onSurface"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:maxWidth="488dp"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bgLayout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/description"
            android:textColor="@color/md_theme_onSurface"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/bookDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/description"
            android:textColor="@color/md_theme_onSurface"
            android:textSize="12sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/bgImg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/md_theme_onSurface"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/back_arrow"
            android:src="@drawable/ic_arrow_circle_left"
            app:tint="@color/md_theme_onSecondaryFixed"
            tools:ignore="ImageContrastCheck" />
    </LinearLayout>

    <ImageView
        android:id="@+id/bookImage"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginTop="95dp"
        android:background="@color/md_theme_onPrimaryFixedVariant"
        android:contentDescription="@string/book_image"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>